--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -22,10 +22,10 @@
             </thead>
             <tbody>
                 <tr th:each="product, iStat : ${productPage.content}" class="hover:bg-gray-50">
-                    <td th:text="${product.id}" class="border border-gray-300 px-4 py-2" />
-                    <td th:text="${product.name}" class="border border-gray-300 px-4 py-2" />
-                    <td th:text="${product.description}" class="border border-gray-300 px-4 py-2" />
-                    <td th:text="${product.type.name}" class="border border-gray-300 px-4 py-2" />
+                    <td th:text="${product.id}" class="border border-gray-300 px-4 py-2"></td>
+                    <td th:text="${product.name}" class="border border-gray-300 px-4 py-2"></td>
+                    <td th:text="${product.description}" class="border border-gray-300 px-4 py-2"></td>
+                    <td th:text="${product.type.name}" class="border border-gray-300 px-4 py-2"></td>
                 </tr>
             </tbody>
         </table>
