--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,9 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Fashion Store</title>
-      <script type="module" crossorigin src="/js/index-BlwxicY4.js"></script>
-      <link rel="stylesheet" crossorigin href="/css/index-DXh4aLPS.css">
+      <script type="module" crossorigin src="/js/index-C4O1OJvx.js"></script>
+      <link rel="modulepreload" crossorigin href="/js/App-BwDgsJLy.js">
+      <link rel="stylesheet" crossorigin href="/css/App-D40ODtiT.css">
     </head>
 
     <body>
